--- a/flickrlib/build.gradle
+++ b/flickrlib/build.gradle
@@ -18,16 +18,13 @@ android {
 }
 
 dependencies {
-
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-
+    implementation deps.androidx.core_ktx
+    implementation deps.androidx.appcompat
+    implementation deps.google.material
+    testImplementation deps.junit
+    androidTestImplementation deps.androidx.test_ext_junit
+    androidTestImplementation deps.androidx.test_espresso_core
+    implementation deps.retrofit2
+    implementation deps.retrofit2_converter_gson
+    implementation deps.google.gson
 }
