--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,44 +24,39 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility sourceCompatibilityVersion
+        targetCompatibility targetCompatibilityVersion
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = jvmTargetVersion
     }
     buildFeatures {
         viewBinding true
         dataBinding true
     }
-
 }
 
 dependencies {
     implementation project(':flickrlib')
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
-    implementation 'androidx.annotation:annotation:1.0.0'
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0"
-    implementation 'androidx.cardview:cardview:1.0.0'
-
-    implementation 'com.google.android.material:material:1.8.0'
-    implementation 'androidx.test:core-ktx:1.5.0'
-    testImplementation 'junit:junit:4.13.2'
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6"
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.intuit.sdp:sdp-android:1.0.6'
-    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
-    implementation("com.google.android.gms:play-services-cronet:18.0.1")
-
-
+    implementation deps.androidx.core_ktx
+    implementation deps.androidx.appcompat
+    implementation deps.google.material
+    testImplementation deps.junit
+    testImplementation deps.junit_jupiter
+    testImplementation deps.kotlinx_coroutines_test
+    androidTestImplementation deps.androidx.test_ext_junit
+    androidTestImplementation deps.androidx.test_espresso_core
+    implementation deps.androidx.constraintlayout
+    implementation deps.androidx.navigation_fragment_ktx
+    implementation deps.androidx.navigation_ui_ktx
+    implementation deps.androidx.annotation
+    implementation deps.androidx.lifecycle_runtime_ktx
+    implementation deps.androidx.cardview
+    implementation deps.androidx.swiperefreshlayout
+    implementation deps.retrofit2
+    implementation deps.retrofit2_converter_gson
+    implementation deps.google.gson
+    implementation deps.google.play_services_cronet
+    implementation deps.sdp_android
 }
